<resources>
    <string name="app_name">Pinebobr</string>
    <string name="signStartStr">Pineapple will save the world.</string>
    <string name="signSignInStr">Sign Up</string>
    <string name="signHaveStr">Have an account already?</string>
    <string name="signLogInStr">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="pineappleID">Pineapple ID</string>
    <string name="pineID"><font size = "12">PineAppleID</font></string>
    <string name="enterID">Enter ID of your device</string>
    <string name="logToApp">Log to app</string>
    <string name="login"><font size = "12">Username</font></string>
    <string name="password"><font size = "12">Password</font></string>
    <string name="forgotPass">Forgot your password?</string>
    <string name="create">Finish</string>
    <string name="createAccount">Create your account</string>
    <string name="email"><font size = "12">Email</font></string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="weekDay">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="day">D</string>
    <string name="now">N</string>
    <string name="week">W</string>
    <string name="month">M</string>
</resources>
