<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".SignInActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarActivitySignUpId"
        style="@style/Toolbar">
        <Button
            android:id="@+id/btnCancel_signIn"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:height="16dp"
            android:layout_marginStart="24dp"
            android:lineSpacingMultiplier="1.14"
            android:width="56dp"
            android:background="@null"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:text="@string/cancel"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pine_white_toolbar"
            android:layout_marginStart="89dp"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/logText_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logToApp"
        android:height="39dp"
        android:width="218dp"
        android:lineSpacingMultiplier="1.17"
        android:textColor="#FF13AA9A"
        android:layout_marginTop="23dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/inputLogin_signIn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColorHint="#FF9B9B9B"
        android:maxLines="1"
        android:textColor="#FF9B9B9B"
        android:textSize="14sp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="25dp"
        android:paddingBottom="15dp"
        android:paddingStart="6.5dp"
        android:backgroundTint="#FFBFBFBF"/>

    <EditText
        android:id="@+id/inputPass_signIn"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FF9B9B9B"
        android:maxLines="1"
        android:textColor="#FF9B9B9B"
        android:textSize="14sp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="25dp"
        android:paddingBottom="15dp"
        android:paddingStart="6.5dp"
        android:backgroundTint="#FFBFBFBF" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnForgot_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.25"
            android:width="166dp"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:text="@string/forgotPass"
            android:textColor="#FF08B9A5"
            android:textAllCaps="false"
            android:background="@null"/>
        <Button
            android:id="@+id/btnLogIn_signIn"
            android:layout_width="96dp"
            android:layout_height="32dp"
            android:layout_marginStart="42dp"
            android:background="@drawable/btn_log_in"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:lineSpacingMultiplier="1.18"
            android:textAllCaps="false"
            android:text="@string/signLogInStr"
            />
    </LinearLayout>
</LinearLayout>