<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpIdActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarActivitySignUpId"
        style="@style/Toolbar">
        <Button
            android:id="@+id/btnCancel_signUpId"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:height="16dp"
            android:layout_marginStart="24dp"
            android:lineSpacingMultiplier="1.14"
            android:width="56dp"
            android:background="@null"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:text="@string/cancel"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pine_white_toolbar"
            android:layout_marginStart="89dp"/>
        <Button
            android:id="@+id/btnNext_signUpId"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:lineSpacingMultiplier="1.14"
            android:background="@null"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:text="@string/next"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <TextView
                android:id="@+id/pineID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:height="35dp"
                android:width="218dp"
                android:lineSpacingMultiplier="1.17"
                android:text="@string/pineappleID"
                android:textColor="#FF13AA9A"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="3dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enterID"
                android:lineSpacingMultiplier="1.17"
                android:text="@string/enterID"
                android:width="243dp"
                android:layout_marginStart="4dp"
                android:textColor="#FF08B9A5"/>
            <EditText
                android:id="@+id/inputID"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:hint="@string/pineID"
                android:textColor="#FF9B9B9B"
                android:textColorHint="#FF9B9B9B"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:paddingBottom="15dp"
                android:paddingLeft="6.5dp"
                android:backgroundTint="#FFBFBFBF"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pine_blue"
            android:layout_marginTop="12dp"
            />
    </LinearLayout>
</LinearLayout>