<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".SignUpDataActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarActivitySignUpId"
        style="@style/Toolbar">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pine_white_toolbar"
            android:layout_marginStart="169dp"/>
        <Button
            android:id="@+id/btnCreate_signUpData"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:lineSpacingMultiplier="1.14"
            android:background="@null"
            android:textAllCaps="false"
            android:textStyle="normal"
            android:text="@string/create"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <TextView
                android:id="@+id/createYourAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="39dp"
                android:width="218dp"
                android:lineSpacingMultiplier="1.17"
                android:text="@string/createAccount"
                android:textColor="#FF13AA9A"
                android:textSize="18sp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="23dp"
                />
            <EditText
                android:layout_width="202.5dp"
                android:layout_height="39dp"
                android:id="@+id/inputEmail_signUpData"
                android:hint="@string/email"
                android:textColor="#FF9B9B9B"
                android:textColorHint="#FF9B9B9B"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:paddingBottom="15dp"
                android:paddingLeft="6.5dp"
                android:maxLines="1"
                android:lineSpacingMultiplier="1.25"
                android:backgroundTint="#FFBFBFBF"/>
            <EditText
                android:layout_width="202.5dp"
                android:layout_height="39dp"
                android:id="@+id/inputLogin_signUpData"
                android:hint="@string/login"
                android:textColor="#FF9B9B9B"
                android:textColorHint="#FF9B9B9B"
                android:textSize="14sp"
                android:paddingBottom="15dp"
                android:paddingLeft="6.5dp"
                android:maxLines="1"
                android:lineSpacingMultiplier="1.25"
                android:backgroundTint="#FFBFBFBF" />
            <EditText
                android:layout_width="202.5dp"
                android:layout_height="39dp"
                android:id="@+id/inputPass_signUpData"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#FF9B9B9B"
                android:textColorHint="#FF9B9B9B"
                android:textSize="14sp"
                android:paddingBottom="15dp"
                android:paddingLeft="6.5dp"
                android:maxLines="1"
                android:lineSpacingMultiplier="1.25"
                android:backgroundTint="#FFBFBFBF" />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pine_blue"
            android:layout_marginTop="29dp"
            />
    </LinearLayout>
</LinearLayout>