<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".DayActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarActivitySignUpId"
        style="@style/Toolbar">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pine_white_toolbar"
            android:layout_marginStart="169dp"/>
        <Button
            android:id="@+id/btnCreate_signUpData"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="103.63dp"
            android:background="@null"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="105dp"
        android:background="@drawable/background_day_bar">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="11dp"
            android:layout_width="320dp"
            android:layout_height="12dp">
            <TextView
                android:id="@+id/monday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingMultiplier="1.20"
                android:textColor="#FF4A4A4A"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/monday"/>
            <TextView
                android:id="@+id/tuesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingMultiplier="1.20"
                android:textColor="#FF4A4A4A"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/tuesday"/>
            <TextView
                android:id="@+id/wednesday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingMultiplier="1.20"
                android:textColor="#FF4A4A4A"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/wednesday"/>
            <TextView
                android:id="@+id/thursday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingMultiplier="1.20"
                android:textColor="#FF4A4A4A"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/thursday" />
            <TextView
                android:id="@+id/friday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingMultiplier="1.20"
                android:textColor="#FF4A4A4A"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/friday"/>
            <TextView
                android:id="@+id/saturday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingMultiplier="1.20"
                android:textColor="#FF4A4A4A"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/saturday"/>
            <TextView
                android:id="@+id/sunday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingMultiplier="1.20"
                android:textColor="#FF4A4A4A"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/sunday"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:width="36dp"
                    android:height="36dp"
                    android:background="#FFFAFAFA"
                    android:layout_centerInParent="true"
                    android:lineSpacingMultiplier="1.21"
                    android:textAllCaps="false"
                    android:textColor="#FF4A4A4A"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn2"
                    android:textColor="#FF4A4A4A"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:lineSpacingMultiplier="1.21"
                    android:background="#FFFAFAFA"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn3"
                    android:textColor="#FF4A4A4A"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:lineSpacingMultiplier="1.21"
                    android:background="#FFFAFAFA"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn4"
                    android:textColor="#FF4A4A4A"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:lineSpacingMultiplier="1.21"
                    android:background="#FFFAFAFA"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn5"
                    android:textColor="#FF4A4A4A"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:lineSpacingMultiplier="1.21"
                    android:background="#FFFAFAFA"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn6"
                    android:textColor="#FF4A4A4A"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:lineSpacingMultiplier="1.21"
                    android:background="#FFFAFAFA"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn7"
                    android:textColor="#FF4A4A4A"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:lineSpacingMultiplier="1.21"
                    android:background="#FFFAFAFA"
                    style="?android:attr/borderlessButtonStyle"
                    />
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/dateDay"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:lineSpacingMultiplier="1.17"
            android:textColor="#FF4A4A4A"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:height="14dp"
            android:width="49dp"
            android:textSize="12sp"
            android:textColor="#FF9B9B9B"
            android:text="@string/now"
            android:background="@drawable/background_now_btn" />

        <Button
            android:id="@+id/btnDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:height="14dp"
            android:width="49dp"
            android:textSize="12sp"
            android:textColor="#FF9B9B9B"
            android:text="@string/day"
            android:background="@drawable/background_day_btn" />

        <Button
            android:id="@+id/btnWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:height="14dp"
            android:width="49dp"
            android:textSize="12sp"
            android:textColor="#FF9B9B9B"
            android:text="@string/week"
            android:background="@drawable/background_day_btn"/>

        <Button
            android:id="@+id/btnMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:height="14dp"
            android:width="49dp"
            android:textSize="12sp"
            android:textColor="#FF9B9B9B"
            android:text="@string/month"
            android:background="@drawable/background_month_btn" />
    </LinearLayout>
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/nowChart"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">
    </com.github.mikephil.charting.charts.PieChart>
    <TextView
        android:id="@+id/vatt"
        android:layout_width="193dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.17"
        android:textColor="#FF13A29A"
        android:textSize="24sp"/>
</LinearLayout>